# cellularproxy

./: Cargo.toml  Insomnia.json  README.md  clippy.toml
modem/: Cargo.toml
modem/src/: api.rs  device.rs  jemalloc.rs  lib.rs  metrics.rs  modem.rs  modem_huaweie337.rs  socks5.rs  tcp.rs  username.rs
src/: main.rs
