[package]
name = "proxymodem"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["modem"]

[dependencies]
modem = { path = "./modem" }
tikv-jemallocator = { version = "0.6.0", features = [
    "unprefixed_malloc_on_supported_platforms",
    "background_threads",
] }
clap = { version = "4.5.35", features = ["derive", "env"] }
slog-async = "2.8.0"
slog-json = "2.6.1"
time = "0.3.41"
tokio = { workspace = true }
slog = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
anyhow = { workspace = true }
log = "0.4.27"
quick-xml = "0.37.5"
reqwest = "0.12.15"
base64 = "0.22.1"
openssl = "0.10.72"
hex = "0.4.3"

[workspace.dependencies]
tokio = { version = "1.45.0", features = ["full"] }
slog = "2.7.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
prometheus = "0.14.0"
anyhow = "1.0.98"
axum = "0.8.4"
reqwest      = { version = "0.12.15", features = ["cookies","gzip"] }
uuid        = { version = "1.16.0", features = ["v5"] }
get_if_addrs = "0.5.3"
async-trait = "0.1.88"
libc = "0.2.172"